# easy_init_newrelic_opentelemetry

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: initialize.rs  lib.rs
