[package]
name = "easy_init_newrelic_opentelemetry"
version = "0.2.0"
authors = ["Romira915 <me@romira.dev>"]
description = "A simple example of how to initialize a newrelic opentelemetry exporter"
homepage = "https://github.com/Romira915/easy_init_newrelic_opentelemetry"
repository = "https://github.com/Romira915/easy_init_newrelic_opentelemetry"
rust-version = "1.75.0"
categories = ["development-tools", "web-programming", "network-programming"]
keywords = ["tracing", "metrics", "logging", "opentelemetry", "newrelic"]
readme = "README.md"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.26.0", features = ["metrics", "logs"] }
opentelemetry-http = "0.26.0"
opentelemetry-otlp = { version = "0.26.0", features = [
    "tonic",
    "metrics",
    "logs",
    "tracing",
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
    "tls",
    "tls-roots",
    "opentelemetry-http"
] }
opentelemetry-semantic-conventions = { version = "0.26.0", features = ["semconv_experimental"] }
opentelemetry-stdout = { version = "0.26.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.26.0", features = [
    "rt-tokio",
    "logs",
    "metrics",
] }
tracing = "0.1.40"
tracing-opentelemetry = { version = "0.27.0", features = [] }
tracing-subscriber = { version = "0.3.18", features = [
    "alloc",
    "json",
    "fmt",
    "env-filter",
    "std",
    "time",
] }
time = { version = "0.3.31", features = ["macros", "formatting"] }
opentelemetry-appender-tracing2 = "0.26.0"
hyper = "1.5.0"
anyhow = "1.0.90"

[dev-dependencies]
tokio = { version = "1.40.0", features = [] }

[badges]
github = { repository = "tanakh/hogehoge", workflow = "Rust" }
