[package]
name = "easy_init_newrelic_opentelemetry"
version = "0.4.1"
authors = ["Romira915 <me@romira.dev>"]
description = "A simple example of how to initialize a newrelic opentelemetry exporter"
homepage = "https://github.com/Romira915/easy_init_newrelic_opentelemetry"
repository = "https://github.com/Romira915/easy_init_newrelic_opentelemetry"
rust-version = "1.75.0"
categories = ["development-tools", "web-programming", "network-programming"]
keywords = ["tracing", "metrics", "logging", "opentelemetry", "newrelic"]
readme = "README.md"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.31.0", features = ["metrics", "logs"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
    "grpc-tonic",
    "metrics",
    "logs",
    "trace",
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
    "tls",
    "tls-roots",
] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
    "semconv_experimental",
] }
opentelemetry-stdout = { version = "0.31.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.31.0", features = [
    "logs",
    "metrics",
] }
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.32.1", features = [] }
tracing-subscriber = { version = "0.3.22", features = [
    "alloc",
    "json",
    "fmt",
    "env-filter",
    "std",
    "time",
] }
time = { version = "0.3.47", features = ["macros", "formatting"] }
opentelemetry-appender-tracing = "0.31.1"
anyhow = "1.0.101"

[dev-dependencies]
tokio = { version = "1.49.0", features = [] }
